feat: add header with navigation bar

--- a/index.html
+++ b/index.html
@@ -4,22 +4,41 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Band</title>
     <link rel="stylesheet" href="./assets/css/style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700;800&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
+
 </head>
 <body>
     <div id="main">
-        <div id="header">
+        <div class="header">
+            <ul class="nav">
+                <li class="nav__item"><a href="#">Home</a></li>
+                <li class="nav__item"><a href="#band">Band</a></li>
+                <li class="nav__item"><a href="#tour">Tour</a></li>
+                <li class="nav__item"><a href="#contact">Contact</a></li>
+                <li class="nav__item">
+                    <a href="#">
+                        More
+                        <i class="fa-solid fa-caret-down"></i>
+                    </a>
+                    <ul class="subnav">
+                        <li class="subnav__item"><a href="#">Merchandise</a></li>
+                        <li class="subnav__item"><a href="#">Extras</a></li>
+                        <li class="subnav__item"><a href="#">Media</a></li>
+                    </ul>
+                </li>
+            </ul>
+        </div>
+        <div class="slider">
 
         </div>
-        <div id="slider">
+        <div class="content">
 
         </div>
-        <div id="content">
+        <div class="footer">
 
-        </div>
-        <div id="footer">
-            
         </div>
     </div>
 </body>
