feat: attach search button to header

--- a/index.html
+++ b/index.html
@@ -30,13 +30,19 @@
                     </ul>
                 </li>
             </ul>
+            <div class="search-btn">
+                <i class="fa-solid fa-magnifying-glass"></i>
+            </div>
         </div>
+
         <div class="slider">
 
         </div>
+
         <div class="content">
 
         </div>
+        
         <div class="footer">
 
         </div>
