--- a/index.html
+++ b/index.html
@@ -36,13 +36,20 @@
         </div>
 
         <div class="slider">
-
+            <div class="event">
+                <h2 class="event__heading">
+                    Chicago
+                </h2>
+                <p class="event__description">
+                    Thank you, Chicago - A night we won't forget
+                </p>
+            </div>
         </div>
 
         <div class="content">
 
         </div>
-        
+
         <div class="footer">
 
         </div>
