--- a/index.html
+++ b/index.html
@@ -43,7 +43,37 @@
                 </p>
             </div>
         </div>
-        <div class="content">
+        <div id="band" class="content">
+            <div class="content__heading">
+                THE BAND
+            </div>
+            <p class="content__subheading">
+                We love music
+            </p>
+            <p class="about-text">
+                We have created a fictional band website. Lorem ipsum dolor sit amet, consectetur adipiscing
+                elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
+                veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat
+                nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia
+                deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor
+                incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud 
+                exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+            </p>
+            <div class="members">
+                <div class="members__item">
+                    <p class="members__item-name">Name</p>
+                    <img src="./assets/images/members/member-1.jpg" alt="Member image" class="members__item-image">
+                </div>
+                <div class="members__item">
+                    <p class="members__item-name">Name</p>
+                    <img src="./assets/images/members/member-1.jpg" alt="Member image" class="members__item-image">
+                </div>
+                <div class="members__item">
+                    <p class="members__item-name">Name</p>
+                    <img src="./assets/images/members/member-1.jpg" alt="Member image" class="members__item-image">
+                </div>
+            </div>
         </div>
     </main>
     <footer class="footer">
