feat: handle tickets modal events for tour part

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                             <h3 class="tour-detail__heading">New York</h3>
                             <p class="tour-detail__subheading">Fri 27 Nov 2016</p>
                             <p class="tour-detail__description">Praesent tincidunt sed tellus ut rutrum sed vitae justo.</p>
-                            <button class="tour-detail__btn">Buy Tickets</button>
+                            <button class="tour-detail__btn js-buy-tickets">Buy Tickets</button>
                         </div>
                     </div>
                     <div class="tour__item">
@@ -108,7 +108,7 @@
                             <h3 class="tour-detail__heading">Paris</h3>
                             <p class="tour-detail__subheading">Sat 28 Nov 2016</p>
                             <p class="tour-detail__description">Praesent tincidunt sed tellus ut rutrum sed vitae justo.</p>
-                            <button class="tour-detail__btn">Buy Tickets</button>
+                            <button class="tour-detail__btn js-buy-tickets">Buy Tickets</button>
                         </div>
                     </div>
                     <div class="tour__item">
@@ -117,15 +117,15 @@
                             <h3 class="tour-detail__heading">San Francisco</h3>
                             <p class="tour-detail__subheading">Sun 29 Nov 2016</p>
                             <p class="tour-detail__description">Praesent tincidunt sed tellus ut rutrum sed vitae justo.</p>
-                            <button class="tour-detail__btn">Buy Tickets</button>
+                            <button class="tour-detail__btn js-buy-tickets">Buy Tickets</button>
                         </div>
                     </div>
                 </div>
             </div>
             <!-- tour ticket modal -->
-            <div class="modal">
-                <div class="modal__container">
-                    <button class="modal__close">
+            <div class="modal js-modal">
+                <div class="modal__container js-modal-container">
+                    <button class="modal__close js-close-btn">
                         <i class="fa-solid fa-xmark"></i>
                     </button>
                     <div class="modal__header">
@@ -158,5 +158,6 @@
     <!-- footer -->
     <footer class="footer">
     </footer>
+    <script src="./assets/js/main.js"></script>
 </body>
 </html>
