feat: create contact part and layout it by row cloumn layout

--- a/index.html
+++ b/index.html
@@ -46,12 +46,8 @@
         </div>
         <!-- band -->
         <div id="band" class="content">
-            <div class="content__heading">
-                THE BAND
-            </div>
-            <p class="content__subheading">
-                We love music
-            </p>
+            <div class="content__heading text-center">THE BAND</div>
+            <p class="content__subheading text-center">We love music</p>
             <p class="about-text">
                 We have created a fictional band website. Lorem ipsum dolor sit amet, consectetur adipiscing
                 elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
@@ -81,12 +77,8 @@
         <div id="tour" class="container">
             <!-- tour content -->
             <div class="content ">
-                <div class="content__heading text-white">
-                    TOUR DATES
-                </div>
-                <p class="content__subheading">
-                    Remember to book your tickets!
-                </p>
+                <div class="content__heading text-white text-center">TOUR DATES</div>
+                <p class="content__subheading text-center">Remember to book your tickets!</p>
                 <ul class="booking">
                     <li class="booking__month">September<span class="booking__sold-out">Sold out</span></li>
                     <li class="booking__month">October<span class="booking__sold-out">Sold out</span></li>
@@ -152,6 +144,34 @@
                         Need <a href="#" class="modal__footer-help">help?</a>
                     </div>
                 </div>
+            </div>
+        </div>
+        <!-- contact -->
+        <div id="#contact" class="content">
+            <div class="content__heading text-center">CONTACT</div>
+            <p class="content__subheading text-center">Fan? Drop a note!</p>
+            <div class="row contact">
+                <div class="col col-6 contact-us">
+                    <p><i class="fa-solid fa-location-dot"></i>Chicago, US</p>
+                    <p><i class="fa-solid fa-phone"></i>Phone: +00 151515</p>
+                    <p><i class="fa-solid fa-envelope"></i>Email: mail@mail.com</p>
+                </div>
+                <form action="" class="col col-6">
+                    <div class="row mb-8">
+                        <div class="col col-6">
+                            <input class="form-control" type="text" name="Name" placeholder="Name" required>
+                        </div>
+                        <div class="col col-6">
+                            <input class="form-control" type="email" name="Email" placeholder="Email" required>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col col-12">
+                            <input class="form-control" type="text" name="Message" placeholder="Message" required>
+                        </div>
+                    </div>
+                    <input class="contact-submit" type="submit" value="SEND">
+                </form>
             </div>
         </div>
     </main>
