--- a/index.html
+++ b/index.html
@@ -174,6 +174,10 @@
                 </form>
             </div>
         </div>
+        <!-- map -->
+        <div class="map">
+            <img src="./assets/images/map.jpg" alt="Map">
+        </div>
     </main>
     <!-- footer -->
     <footer class="footer">
