feat: create footer

--- a/index.html
+++ b/index.html
@@ -180,7 +180,18 @@
         </div>
     </main>
     <!-- footer -->
-    <footer class="footer">
+    <footer class="footer text-center">
+        <div class="social">
+            <a href="#!"><i class="fa-brands fa-facebook"></i></a>
+            <a href="#!"><i class="fa-brands fa-square-instagram"></i></a>
+            <a href="#!"><i class="fa-brands fa-twitter"></i></a>
+            <a href="#!"><i class="fa-brands fa-youtube"></i></a>
+            <a href="#!"><i class="fa-brands fa-linkedin"></i></a>
+        </div>
+        <div class="copy-right">
+            <p>Designed by w3.css</p>
+            <p>Implemented by nhannguyencsd</p>
+        </div>
     </footer>
     <script src="./assets/js/main.js"></script>
 </body>
