fix: set id #contact to contact and style scroll-behavior

--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
             </div>
         </div>
         <!-- contact -->
-        <div id="#contact" class="content">
+        <div id="contact" class="content">
             <div class="content__heading text-center">CONTACT</div>
             <p class="content__subheading text-center">Fan? Drop a note!</p>
             <div class="row contact">
