--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Band</title>
     <link rel="stylesheet" href="./assets/css/normalize.css">
     <link rel="stylesheet" href="./assets/css/main.css">
+    <link rel="stylesheet" href="./assets/css/responsive.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
 </head>
 <body>
@@ -30,6 +31,9 @@
         </ul>
         <div class="header__search">
             <i class="fa-solid fa-magnifying-glass"></i>
+        </div>
+        <div class="header__mobile-menu-btn">
+            <i class="fa-solid fa-bars"></i>
         </div>
     </header>
     <main class="main">
