refactor: replace flex style to grid style at members band

--- a/index.html
+++ b/index.html
@@ -62,18 +62,18 @@
                 incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud 
                 exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
             </p>
-            <div class="members">
-                <div class="members__item">
-                    <p class="members__item-name">Name</p>
-                    <img src="./assets/images/members/member-1.jpg" alt="Member image" class="members__item-image">
+            <div class="row">
+                <div class="member col col-4">
+                    <p class="member__name">Name</p>
+                    <img src="./assets/images/members/member-1.jpg" alt="Member image" class="member__image">
                 </div>
-                <div class="members__item">
-                    <p class="members__item-name">Name</p>
-                    <img src="./assets/images/members/member-1.jpg" alt="Member image" class="members__item-image">
+                <div class="member col col-4">
+                    <p class="member__name">Name</p>
+                    <img src="./assets/images/members/member-1.jpg" alt="Member image" class="member__image">
                 </div>
-                <div class="members__item">
-                    <p class="members__item-name">Name</p>
-                    <img src="./assets/images/members/member-1.jpg" alt="Member image" class="members__item-image">
+                <div class="member col col-4">
+                    <p class="member__name">Name</p>
+                    <img src="./assets/images/members/member-1.jpg" alt="Member image" class="member__image">
                 </div>
             </div>
         </div>
