--- a/index.html
+++ b/index.html
@@ -88,32 +88,38 @@
                     <li class="booking__month">October<span class="booking__sold-out">Sold out</span></li>
                     <li class="booking__month">November<span class="booking__quantity">3</span></li>
                 </ul>
-                <div class="tour">
-                    <div class="tour__item">
-                        <img src="./assets/images/tours/newyork.jpg" alt="" class="tour-image">
-                        <div class="tour-detail">
-                            <h3 class="tour-detail__heading">New York</h3>
-                            <p class="tour-detail__subheading">Fri 27 Nov 2016</p>
-                            <p class="tour-detail__description">Praesent tincidunt sed tellus ut rutrum sed vitae justo.</p>
-                            <button class="tour-detail__btn js-buy-tickets">Buy Tickets</button>
+                <div class="row">
+                    <div class="col col-4">
+                        <div class="tour-item">
+                            <img src="./assets/images/tours/newyork.jpg" alt="" class="tour-image">
+                            <div class="tour-detail">
+                                <h3 class="tour-detail__heading">New York</h3>
+                                <p class="tour-detail__subheading">Fri 27 Nov 2016</p>
+                                <p class="tour-detail__description">Praesent tincidunt sed tellus ut rutrum sed vitae justo.</p>
+                                <button class="tour-detail__btn js-buy-tickets">Buy Tickets</button>
+                            </div>
+                        </div> 
+                    </div>
+                    <div class="col col-4">
+                        <div class="tour-item">
+                            <img src="./assets/images/tours/paris.jpg" alt="" class="tour-image">
+                            <div class="tour-detail">
+                                <h3 class="tour-detail__heading">Paris</h3>
+                                <p class="tour-detail__subheading">Sat 28 Nov 2016</p>
+                                <p class="tour-detail__description">Praesent tincidunt sed tellus ut rutrum sed vitae justo.</p>
+                                <button class="tour-detail__btn js-buy-tickets">Buy Tickets</button>
+                            </div>
                         </div>
                     </div>
-                    <div class="tour__item">
-                        <img src="./assets/images/tours/paris.jpg" alt="" class="tour-image">
-                        <div class="tour-detail">
-                            <h3 class="tour-detail__heading">Paris</h3>
-                            <p class="tour-detail__subheading">Sat 28 Nov 2016</p>
-                            <p class="tour-detail__description">Praesent tincidunt sed tellus ut rutrum sed vitae justo.</p>
-                            <button class="tour-detail__btn js-buy-tickets">Buy Tickets</button>
-                        </div>
-                    </div>
-                    <div class="tour__item">
-                        <img src="./assets/images/tours/newyork.jpg" alt="" class="tour-image">
-                        <div class="tour-detail">
-                            <h3 class="tour-detail__heading">San Francisco</h3>
-                            <p class="tour-detail__subheading">Sun 29 Nov 2016</p>
-                            <p class="tour-detail__description">Praesent tincidunt sed tellus ut rutrum sed vitae justo.</p>
-                            <button class="tour-detail__btn js-buy-tickets">Buy Tickets</button>
+                    <div class="col col-4">
+                        <div class="tour-item">
+                            <img src="./assets/images/tours/newyork.jpg" alt="" class="tour-image">
+                            <div class="tour-detail">
+                                <h3 class="tour-detail__heading">San Francisco</h3>
+                                <p class="tour-detail__subheading">Sun 29 Nov 2016</p>
+                                <p class="tour-detail__description">Praesent tincidunt sed tellus ut rutrum sed vitae justo.</p>
+                                <button class="tour-detail__btn js-buy-tickets">Buy Tickets</button>
+                            </div>
                         </div>
                     </div>
                 </div>
