rename class col to lg

--- a/index.html
+++ b/index.html
@@ -64,15 +64,15 @@
                 exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
             </p>
             <div class="row">
-                <div class="member col col-4">
+                <div class="member col lg-4">
                     <p class="member__name">Name</p>
                     <img src="./assets/images/members/member-1.jpg" alt="Member image" class="member__image">
                 </div>
-                <div class="member col col-4">
+                <div class="member col lg-4">
                     <p class="member__name">Name</p>
                     <img src="./assets/images/members/member-1.jpg" alt="Member image" class="member__image">
                 </div>
-                <div class="member col col-4">
+                <div class="member col lg-4">
                     <p class="member__name">Name</p>
                     <img src="./assets/images/members/member-1.jpg" alt="Member image" class="member__image">
                 </div>
@@ -90,7 +90,7 @@
                     <li class="booking__month">November<span class="booking__quantity">3</span></li>
                 </ul>
                 <div class="row">
-                    <div class="col col-4">
+                    <div class="col lg-4">
                         <div class="tour-item">
                             <img src="./assets/images/tours/newyork.jpg" alt="" class="tour-image">
                             <div class="tour-detail">
@@ -101,7 +101,7 @@
                             </div>
                         </div> 
                     </div>
-                    <div class="col col-4">
+                    <div class="col lg-4">
                         <div class="tour-item">
                             <img src="./assets/images/tours/paris.jpg" alt="" class="tour-image">
                             <div class="tour-detail">
@@ -112,7 +112,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col col-4">
+                    <div class="col lg-4">
                         <div class="tour-item">
                             <img src="./assets/images/tours/newyork.jpg" alt="" class="tour-image">
                             <div class="tour-detail">
@@ -162,22 +162,22 @@
             <div class="content__heading text-center">CONTACT</div>
             <p class="content__subheading text-center">Fan? Drop a note!</p>
             <div class="row contact">
-                <div class="col col-6 contact-us">
+                <div class="col lg-6 contact-us">
                     <p><i class="fa-solid fa-location-dot"></i>Chicago, US</p>
                     <p><i class="fa-solid fa-phone"></i>Phone: +00 151515</p>
                     <p><i class="fa-solid fa-envelope"></i>Email: mail@mail.com</p>
                 </div>
-                <form action="" class="col col-6">
+                <form action="" class="col lg-6">
                     <div class="row mb-8">
-                        <div class="col col-6">
+                        <div class="col lg-6">
                             <input class="form-control" type="text" name="Name" placeholder="Name" required>
                         </div>
-                        <div class="col col-6">
+                        <div class="col lg-6">
                             <input class="form-control" type="email" name="Email" placeholder="Email" required>
                         </div>
                     </div>
                     <div class="row">
-                        <div class="col col-12">
+                        <div class="col lg-12">
                             <input class="form-control" type="text" name="Message" placeholder="Message" required>
                         </div>
                     </div>
