style: add resposive about part on mobile

--- a/index.html
+++ b/index.html
@@ -64,15 +64,15 @@
                 exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
             </p>
             <div class="row">
-                <div class="member col lg-4">
+                <div class="member col lg-4 sm-12">
                     <p class="member__name">Name</p>
                     <img src="./assets/images/members/member-1.jpg" alt="Member image" class="member__image">
                 </div>
-                <div class="member col lg-4">
+                <div class="member col lg-4 sm-12">
                     <p class="member__name">Name</p>
                     <img src="./assets/images/members/member-1.jpg" alt="Member image" class="member__image">
                 </div>
-                <div class="member col lg-4">
+                <div class="member col lg-4 sm-12">
                     <p class="member__name">Name</p>
                     <img src="./assets/images/members/member-1.jpg" alt="Member image" class="member__image">
                 </div>
