style: add resposive tour part on mobile

--- a/index.html
+++ b/index.html
@@ -79,9 +79,9 @@
             </div>
         </div>
         <!-- tour -->
-        <div id="tour" class="container">
+        <div id="tour" class="tour">
             <!-- tour content -->
-            <div class="content ">
+            <div class="content">
                 <div class="content__heading text-white text-center">TOUR DATES</div>
                 <p class="content__subheading text-center">Remember to book your tickets!</p>
                 <ul class="booking">
@@ -90,7 +90,7 @@
                     <li class="booking__month">November<span class="booking__quantity">3</span></li>
                 </ul>
                 <div class="row">
-                    <div class="col lg-4">
+                    <div class="col lg-4 sm-12">
                         <div class="tour-item">
                             <img src="./assets/images/tours/newyork.jpg" alt="" class="tour-image">
                             <div class="tour-detail">
@@ -101,7 +101,7 @@
                             </div>
                         </div> 
                     </div>
-                    <div class="col lg-4">
+                    <div class="col lg-4 sm-12">
                         <div class="tour-item">
                             <img src="./assets/images/tours/paris.jpg" alt="" class="tour-image">
                             <div class="tour-detail">
@@ -112,7 +112,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col lg-4">
+                    <div class="col lg-4 sm-12">
                         <div class="tour-item">
                             <img src="./assets/images/tours/newyork.jpg" alt="" class="tour-image">
                             <div class="tour-detail">
