--- a/index.html
+++ b/index.html
@@ -162,17 +162,17 @@
             <div class="content__heading text-center">CONTACT</div>
             <p class="content__subheading text-center">Fan? Drop a note!</p>
             <div class="row contact">
-                <div class="col lg-6 contact-us">
+                <div class="col lg-6 sm-12 sm-12 contact-us">
                     <p><i class="fa-solid fa-location-dot"></i>Chicago, US</p>
                     <p><i class="fa-solid fa-phone"></i>Phone: +00 151515</p>
                     <p><i class="fa-solid fa-envelope"></i>Email: mail@mail.com</p>
                 </div>
-                <form action="" class="col lg-6">
+                <form action="" class="col lg-6 sm-12">
                     <div class="row mb-8">
-                        <div class="col lg-6">
-                            <input class="form-control" type="text" name="Name" placeholder="Name" required>
+                        <div class="col lg-6 sm-12">
+                            <input class="form-control contact-name" type="text" name="Name" placeholder="Name" required>
                         </div>
-                        <div class="col lg-6">
+                        <div class="col lg-6 sm-12">
                             <input class="form-control" type="email" name="Email" placeholder="Email" required>
                         </div>
                     </div>
