--- a/index.html
+++ b/index.html
@@ -169,10 +169,10 @@
                 </div>
                 <form action="" class="col lg-6 sm-12">
                     <div class="row mb-8">
-                        <div class="col lg-6 sm-12">
+                        <div class="col lg-6 md-12 sm-12">
                             <input class="form-control contact-name" type="text" name="Name" placeholder="Name" required>
                         </div>
-                        <div class="col lg-6 sm-12">
+                        <div class="col lg-6 md-12 sm-12">
                             <input class="form-control" type="email" name="Email" placeholder="Email" required>
                         </div>
                     </div>
