fix: add href to phone and email at contact part

--- a/index.html
+++ b/index.html
@@ -164,8 +164,14 @@
             <div class="row contact">
                 <div class="col lg-6 sm-12 sm-12 contact-us">
                     <p><i class="fa-solid fa-location-dot"></i>Chicago, US</p>
-                    <p><i class="fa-solid fa-phone"></i>Phone: +00 151515</p>
-                    <p><i class="fa-solid fa-envelope"></i>Email: mail@mail.com</p>
+                    <p>
+                        <i class="fa-solid fa-phone"></i> 
+                        Phone: <a href="tel:+00 151515">+00 151515</a>
+                    </p>
+                    <p>
+                        <i class="fa-solid fa-envelope"></i>
+                        Email: <a href="mailto:mail@mail.com">mail@mail.com</a>
+                    </p>
                 </div>
                 <form action="" class="col lg-6 sm-12">
                     <div class="row mb-8">
