refactor: change class content to grid and update on that change

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             </div>
         </div>
         <!-- band -->
-        <div id="band" class="content">
+        <div id="band" class="grid band">
             <div class="content__heading text-center">THE BAND</div>
             <p class="content__subheading text-center">We love music</p>
             <p class="about-text">
@@ -81,7 +81,7 @@
         <!-- tour -->
         <div id="tour" class="tour">
             <!-- tour content -->
-            <div class="content">
+            <div class="grid">
                 <div class="content__heading text-white text-center">TOUR DATES</div>
                 <p class="content__subheading text-center">Remember to book your tickets!</p>
                 <ul class="booking">
@@ -158,7 +158,7 @@
             </div>
         </div>
         <!-- contact -->
-        <div id="contact" class="content">
+        <div id="contact" class="grid">
             <div class="content__heading text-center">CONTACT</div>
             <p class="content__subheading text-center">Fan? Drop a note!</p>
             <div class="row contact">
