refactor: rename class content__heading and content__subheading

--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
         </div>
         <!-- band -->
         <div id="band" class="grid band">
-            <div class="content__heading text-center">THE BAND</div>
-            <p class="content__subheading text-center">We love music</p>
+            <div class="heading text-center">THE BAND</div>
+            <p class="subheading text-center">We love music</p>
             <p class="about-text">
                 We have created a fictional band website. Lorem ipsum dolor sit amet, consectetur adipiscing
                 elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
@@ -82,8 +82,8 @@
         <div id="tour" class="tour">
             <!-- tour content -->
             <div class="grid">
-                <div class="content__heading text-white text-center">TOUR DATES</div>
-                <p class="content__subheading text-center">Remember to book your tickets!</p>
+                <div class="heading text-white text-center">TOUR DATES</div>
+                <p class="subheading text-center">Remember to book your tickets!</p>
                 <ul class="booking">
                     <li class="booking__month">September<span class="booking__sold-out">Sold out</span></li>
                     <li class="booking__month">October<span class="booking__sold-out">Sold out</span></li>
@@ -159,8 +159,8 @@
         </div>
         <!-- contact -->
         <div id="contact" class="grid">
-            <div class="content__heading text-center">CONTACT</div>
-            <p class="content__subheading text-center">Fan? Drop a note!</p>
+            <div class="heading text-center">CONTACT</div>
+            <p class="subheading text-center">Fan? Drop a note!</p>
             <div class="row contact">
                 <div class="col lg-6 sm-12 sm-12 contact-us">
                     <p><i class="fa-solid fa-location-dot"></i>Chicago, US</p>
